# vcpkg-16484

./: CMakeLists.txt  readme.md
triplets/: x64-linux.cmake
triplets/v141/: x64-windows-static.cmake  x86-windows-static.cmake
triplets/v142/: x64-windows-static.cmake  x86-windows-static.cmake
